fixed table x overflow bug by: * Giving the nav-content a width of 100% - 76px (the sidebar width). * Wrapping the tables with a container with a 100% width and auto overflow-x handling. * Limiting the process id to 9 characters.

--- a/src/App.css
+++ b/src/App.css
@@ -44,10 +44,16 @@
   }
 }
 
+/* nav + content */
+.nav-content {
+  width: calc(100% - 76px);
+}
+
+/* end nav + content */
 /* Content */
 .content {
   height: calc(100% - 78px);
-  width: calc(100%);
+  width: 100%;
   overflow-y: scroll;
 }
 
